--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.baseline-on-migrate=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
