fix bug db postgre

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
           <!--SpringDoc dependencies -->
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -98,5 +103,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 </project>
