--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name = org.postgresql.Driver
 
 spring.datasource.username = postgres
 spring.datasource.password = 123456
-spring.datasource.url=jdbc:postgresql://localhost:5433/backend?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true&autoReconnect=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/backend?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true&autoReconnect=true
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -16,4 +16,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.baseline-on-migrate=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+openapi.rosetta.base-path: api
 
